WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148927
[EFL] Many of the css3/device-adapt/* tests failed after
r188548
.
https://bugs.webkit.org/show_bug.cgi?id=148927
Summary
[EFL] Many of the css3/device-adapt/* tests failed after r188548.
Hunseop Jeong
Reported
2015-09-07 04:07:19 PDT
https://build.webkit.org/builders/EFL%20Linux%2064-bit%20Release%20WK2/builds/24260/steps/layout-test/logs/stdio
css3/device-adapt/opera/cascading-002.xhtml [ Failure ] css3/device-adapt/opera/cascading-003.xhtml [ Failure ] css3/device-adapt/opera/cascading-004.xhtml [ Failure ] css3/device-adapt/opera/constrain-001.xhtml [ Failure ] css3/device-adapt/opera/constrain-004.xhtml [ Failure ] css3/device-adapt/opera/constrain-005.xhtml [ Failure ] css3/device-adapt/opera/constrain-006.xhtml [ Failure ] css3/device-adapt/opera/constrain-007.xhtml [ Failure ] css3/device-adapt/opera/constrain-008.xhtml [ Failure ] css3/device-adapt/opera/constrain-010.xhtml [ Failure ] css3/device-adapt/opera/constrain-011.xhtml [ Failure ] css3/device-adapt/opera/constrain-013.xhtml [ Failure ] css3/device-adapt/opera/constrain-014.xhtml [ Failure ] css3/device-adapt/opera/constrain-015.xhtml [ Failure ] css3/device-adapt/opera/constrain-016.xhtml [ Failure ] css3/device-adapt/opera/constrain-017.xhtml [ Failure ] css3/device-adapt/opera/constrain-018.xhtml [ Failure ] css3/device-adapt/opera/constrain-019.xhtml [ Failure ] css3/device-adapt/opera/constrain-020.xhtml [ Failure ] css3/device-adapt/opera/syntax-001.xhtml [ Failure ] css3/device-adapt/opera/syntax-002.xhtml [ Failure ] css3/device-adapt/opera/syntax-003.xhtml [ Failure ] css3/device-adapt/viewport-width-check-window-innerwidth-correct.html [ Failure ]
Attachments
Patch
(2.39 KB, patch)
2015-09-07 04:28 PDT
,
Hunseop Jeong
no flags
Details
Formatted Diff
Diff
Patch
(2.39 KB, patch)
2015-09-07 04:39 PDT
,
Hunseop Jeong
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Hunseop Jeong
Comment 1
2015-09-07 04:28:35 PDT
Created
attachment 260732
[details]
Patch
Hunseop Jeong
Comment 2
2015-09-07 04:35:13 PDT
This patch is twice checking the 'if (test.urlContains("device-adapt/") || test.urlContains("device-adapt\\"))' in TestController and TestControllerEfl. Do I move the check logic to TestController to remove the duplicated code?
Csaba Osztrogonác
Comment 3
2015-09-07 04:35:31 PDT
Comment on
attachment 260732
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=260732&action=review
r=me
> Tools/ChangeLog:9 > + overwritted by updatePlatformSpecificViewOptionsForTest after
r188548
.
typo: overwritten
> Tools/ChangeLog:14 > + (WTR::shouldUseFixedLayout): Return the true if the test is related with 'device-adapt'.
nit: Please remove "the" before landing the patch. --> Return true ...
Hunseop Jeong
Comment 4
2015-09-07 04:39:59 PDT
Created
attachment 260733
[details]
Patch
Hunseop Jeong
Comment 5
2015-09-07 04:42:05 PDT
(In reply to
comment #3
)
> Comment on
attachment 260732
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=260732&action=review
> > r=me > > > Tools/ChangeLog:9 > > + overwritted by updatePlatformSpecificViewOptionsForTest after
r188548
. > > typo: overwritten > > > Tools/ChangeLog:14 > > + (WTR::shouldUseFixedLayout): Return the true if the test is related with 'device-adapt'. > > nit: Please remove "the" before landing the patch. --> Return true ...
Oops... I fix the typo..
Hunseop Jeong
Comment 6
2015-09-07 04:46:27 PDT
Your name looks like "Csaba Osztrogonác." in changeLog. Do I make the new patch?
Csaba Osztrogonác
Comment 7
2015-09-07 04:48:47 PDT
(In reply to
comment #6
)
> Your name looks like "Csaba Osztrogonác." in changeLog. > Do I make the new patch?
No problem, it is a bug of the review tool, it will be good in the commit log and the change log after landing.
WebKit Commit Bot
Comment 8
2015-09-07 05:34:50 PDT
Comment on
attachment 260733
[details]
Patch Clearing flags on attachment: 260733 Committed
r189464
: <
http://trac.webkit.org/changeset/189464
>
WebKit Commit Bot
Comment 9
2015-09-07 05:34:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug