[EFL] Many of the css3/device-adapt/* tests failed after r188548. https://bugs.webkit.org/show_bug.cgi?id=148927

Patch by Hunseop Jeong <hs85.jeong@samsung.com> on 2015-09-07
Reviewed by Csaba Osztrogonác.

device-adapt/* tests need the fixedLayout option but useFixedLayout option is
overwritten by updatePlatformSpecificViewOptionsForTest after r188548.

* WebKitTestRunner/TestController.cpp:
(WTR::shouldUseFixedLayout): Removed the unnecessary indentations.
* WebKitTestRunner/efl/TestControllerEfl.cpp:
(WTR::shouldUseFixedLayout): Return true if the test is related with 'device-adapt'.

Canonical link: https://commits.webkit.org/167018@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189464 268f45cc-cd09-0410-ab3c-d52691b4dbfc